--- a/package.json
+++ b/package.json
@@ -15,6 +15,10 @@
     "react-scripts": "4.0.1",
     "web-vitals": "^0.2.4"
   },
+  "engines": {
+    "node": "15.3.0",
+    "npm": "6.14.8"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
